# lubby-bar

./: .gitignore  CHANGELOG.md  LICENSE  Package.swift  README.md
.github/workflows/: build.yml  windows.yml
Scripts/: build-app.sh
Sources/LubbyBar/: AppModel.swift  DeviceLogin.swift  Entry.swift  HookCLI.swift  HookInstaller.swift  Keychain.swift  LocalSource.swift  LubbyBarApp.swift  LubbySource.swift  Models.swift  NotchIsland.swift  NotchIslandView.swift  PanelView.swift  PresenceFeed.swift  StatusFile.swift  TerminalFocus.swift
docs/: windows-widget-plan.md
windows/: README.md  index.html  package-lock.json  package.json  vite.config.js
windows/core/: Cargo.toml
windows/core/src/: lib.rs
windows/src/: App.jsx  styles.css
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: main.rs
