[package]
name = "lubby-bar"
version = "0.2.0"
edition = "2021"
description = "Lubby Bar, the Windows system-tray companion to Lubby"
default-run = "lubby-bar"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lubby-core = { path = "../core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Default Tauri custom-protocol for release builds.
custom-protocol = ["tauri/custom-protocol"]
